--- a/vignettes/migbirdHIP-workflow.Rmd
+++ b/vignettes/migbirdHIP-workflow.Rmd
@@ -9,12 +9,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-```{r, include = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>"
-)
-```
+
 
 ## Table of Contents
 
@@ -66,7 +61,8 @@ The USFWS has been using HIP registrations since 1999 to select hunters for the 
 
 The package can be installed from the USFWS GitHub repository using:
 
-```{r, install, eval = FALSE}
+
+``` r
 devtools::install_github("USFWS/migbirdHIP", quiet = T, upgrade = F, , build_vignettes = T)
 ```
 
@@ -74,7 +70,8 @@ devtools::install_github("USFWS/migbirdHIP", quiet = T, upgrade = F, , build_vig
 
 To install a past release, use the example below and substitute the appropriate version number.
 
-```{r, releases, eval = FALSE}
+
+``` r
 devtools::install_github("USFWS/migbirdHIP@v1.2.8", build_vignettes = T)
 ```
 
@@ -82,7 +79,8 @@ devtools::install_github("USFWS/migbirdHIP@v1.2.8", build_vignettes = T)
 
 Load `migbirdHIP` after installation. The package will return a startup message with the version you have installed and what season of HIP data the package version was intended for.
 
-```{r setup}
+
+``` r
 library(migbirdHIP)
 ```
 
@@ -90,9 +88,10 @@ library(migbirdHIP)
 
 The flowchart below is a visual guide to the order in which functions are used. Some functions are only used situationally and some issues with the data cannot be solved using a function at all. The general process of handling HIP data is demonstrated here; every function in the `migbirdHIP` package is included.
 
-```{r flowchart_svg, echo = FALSE, fig.cap = "Overview of migbirdHIP functions in a flowchart format.", out.width = "100%", dev = "svg", fig.align = "center"}
-knitr::include_graphics("image/migbirdHIP_flowchart.svg")
-```
+<div class="figure" style="text-align: center">
+<img src="image/migbirdHIP_flowchart.svg" alt="Overview of migbirdHIP functions in a flowchart format." width="100%" />
+<p class="caption">Overview of migbirdHIP functions in a flowchart format.</p>
+</div>
 
 ## Part A: Data Import and Cleaning {#part-a-data-import-and-cleaning}
 
@@ -106,7 +105,8 @@ This function also converts lowercase state abbreviations to uppercase.
 
 The current hunting season year must be supplied as a parameter to accurately convert dates.
 
-```{r rename, eval = FALSE}
+
+``` r
 fileRename(path = "C:/HIP/raw_data/DL0901", year = 2024)
 ```
 
@@ -114,7 +114,8 @@ fileRename(path = "C:/HIP/raw_data/DL0901", year = 2024)
 
 Check if any files in the input folder have already been written to the processed folder.
 
-```{r filecheck, eval = FALSE}
+
+``` r
 fileCheck(
   raw_path = "C:/HIP/raw_data/DL0901/",
   processed_path = "C:/HIP/corrected_data/"
@@ -145,15 +146,46 @@ Use `unique = TRUE` to read in a frame without exact duplicates, or `unique = FA
 
 We will use the default settings to read in all of the states from download 0901. Fake HIP data files located in the `extdata/DL0901/` directory of the R package will be used as an example.
 
-```{r, readhip}
+
+``` r
 raw_data <- read_hip(paste0(here::here(), "/inst/extdata/DL0901/"))
+#> Error: NA values detected in one or more ID fields (firstname, lastname, state, birth date) for >10% of a file and/or >100 records.
+#> # A tibble: 7 × 3
+#>   dl_state     n proportion
+#>   <chr>    <int>      <dbl>
+#> 1 GA          23       0.1 
+#> 2 MN          22       0.1 
+#> 3 MO          23       0.1 
+#> 4 NJ          22       0.1 
+#> 5 SC          23       0.1 
+#> 6 SD          25       0.11
+#> 7 WY          22       0.1
+#> Error: One or more records contain 'TEST' in first name and last name fields.
+#> # A tibble: 1 × 4
+#>   source_file    record_key  firstname lastname
+#>   <chr>          <chr>       <chr>     <chr>   
+#> 1 KY20240906.txt record_3516 TEST      TEST
+#> Error: One or more records has a '0' in every bag field; these records will be filtered out in clean().
+#> # A tibble: 9 × 2
+#>   source_file    record_key  
+#>   <chr>          <chr>       
+#> 1 CO20240905.txt record_1194 
+#> 2 KS20240830.txt record_3229 
+#> 3 NV20240810.txt record_7176 
+#> 4 OK20240822.txt record_7848 
+#> 5 OR20240828.txt record_8037 
+#> 6 OR20240828.txt record_8078 
+#> 7 TN20240822.txt record_9076 
+#> 8 WA20240818.txt record_10234
+#> 9 WA20240818.txt record_10286
 ```
 
 ### glyphCheck {#glyphcheck}
 
 During pre-processing, R may throw an error that says something like "invalid UTF-8 byte sequence detected". The error usually includes a field name but no other helpful information. The `glyphCheck` function identifies values containing non-UTF-8 glyphs/characters and prints them with the source file in the console so they can be edited.
 
-```{r glyphCheck, eval = FALSE}
+
+``` r
 glyphCheck(raw_data)
 ```
 
@@ -161,7 +193,8 @@ glyphCheck(raw_data)
 
 Find and print any rows that have a line shift error.
 
-```{r shiftCheck, eval = FALSE}
+
+``` r
 shiftCheck(raw_data)
 ```
 
@@ -169,8 +202,27 @@ shiftCheck(raw_data)
 
 Clean the data after it has been read and checked.
 
-```{r, clean}
+
+``` r
 clean_data <- clean(raw_data)
+#> 2s converted to 0s for permit file states:
+#> # A tibble: 8 × 3
+#>   dl_state     n spp   
+#>   <chr>    <int> <chr> 
+#> 1 CO         102 cranes
+#> 2 KS         101 cranes
+#> 3 MT         110 cranes
+#> 4 ND         102 cranes
+#> 5 NM         113 cranes
+#> 6 OK         107 cranes
+#> 7 TX         118 cranes
+#> 8 WY          69 cranes
+#> 2s converted to 0s for permit file states:
+#> # A tibble: 2 × 3
+#>   dl_state     n spp               
+#>   <chr>    <int> <chr>             
+#> 1 CO          99 band_tailed_pigeon
+#> 2 NM         105 band_tailed_pigeon
 ```
 
 The `clean` function does simple data cleaning. Importantly, records are discarded if first name, last name, birth date, state of residence, address AND email, OR city AND zip AND email are missing.
@@ -195,29 +247,42 @@ Other quick fixes include:
 
 The `issueCheck` function filters out past registrations, returns messages for records received that should be saved for the future, and plots records that have a disagreement between registration year and issue date. To skip plotting, specify `plot = F`.
 
-```{r, issuecheck, eval = F}
+
+``` r
 current_data <- issueCheck(clean_data, year = 2024, plot = F)
 ```
 
-```{r, createcurrent, include = F}
-current_data <- clean_data
-```
+
 
 ### duplicateFinder {#duplicatefinder}
 
 The `duplicateFinder` function finds hunters that have more than one registration. Records are grouped by first name, last name, state, birth date, and download state to identify unique hunters. If the same hunter has 2 or more registrations, the fields that are not identical are counted and summarized.
 
-```{r findDuplicates_tbl}
+
+``` r
 duplicateFinder(current_data)
+#> There are 36 registrations with duplicates; 72 total duplicated records.
+#> # A tibble: 2 × 2
+#>   duplicate_field     n
+#>   <chr>           <int>
+#> 1 bag                13
+#> 2 issue_date         23
 ```
 
 ### duplicatePlot {#duplicateplot}
 
 Plot duplicates.
 
-```{r, duplicatePlot, fig.cap = "Figure 1. Plot of types of duplicates.", fig.width = 6, fig.height = 3.5, dpi = 300, out.width = 500, fig.align = "center"}
+
+``` r
 duplicatePlot(current_data)
+#> There are 36 registrations with duplicates; 72 total duplicated records.
 ```
+
+<div class="figure" style="text-align: center">
+<img src="figure/duplicatePlot-1.png" alt="Figure 1. Plot of types of duplicates." width="500" />
+<p class="caption">Figure 1. Plot of types of duplicates.</p>
+</div>
 
 ### duplicateFix {#duplicatefix}
 
@@ -235,7 +300,8 @@ A new field called "record_type" is added to the data after the above deduplicat
 
 Note: This function replaces "." values with NA in non-permit species columns for WA and OR records.
 
-```{r, duplicateFix}
+
+``` r
 deduplicated_data <- duplicateFix(current_data)
 ```
 
@@ -245,8 +311,25 @@ Running `bagCheck` ensures species "bag" values are in order. This function sear
 
 If a value for a species group is given in the HIP data that doesn't match anything in our records, the species reported in the output will have NA values in the "normal_strata" column. These species are not hunted in the reported states.
 
-```{r, bagCheck}
+
+``` r
 bagCheck(deduplicated_data)
+#> Joining with `by = join_by(dl_state, spp)`
+#> Joining with `by = join_by(dl_state, spp, stateBagValue)`
+#> # A tibble: 96 × 6
+#>    dl_state spp              bad_bag_value expected_bag_value     n proportion
+#>    <chr>    <chr>            <chr>         <chr>              <int> <chr>     
+#>  1 MD       woodcock_bag     9             2, 3, 5                1 0%        
+#>  2 DE       woodcock_bag     9             1, 2, 3, 5             1 0%        
+#>  3 MO       dove_bag         9             1, 2, 3, 5             1 0%        
+#>  4 MS       dove_bag         9             1, 2, 3, 5             1 0%        
+#>  5 NJ       woodcock_bag     9             1, 2, 3, 5             1 0%        
+#>  6 OH       dove_bag         9             1, 2, 3, 5             1 0%        
+#>  7 SC       rails_gallinules 9             1, 2, 3, 5             1 0%        
+#>  8 SC       woodcock_bag     9             1, 2, 3, 5             1 0%        
+#>  9 UT       dove_bag         9             1, 2, 3, 5             1 0%        
+#> 10 VA       dove_bag         9             1, 2, 3, 5             1 0%        
+#> # ℹ 86 more rows
 ```
 
 ## Part B: Data Proofing and Correction {#part-b-data-proofing-and-correction}
@@ -255,7 +338,8 @@ bagCheck(deduplicated_data)
 
 After data are cleaned and checked for any important issues that would require manual attention, we `proof`:
 
-```{r, proof}
+
+``` r
 proofed_data <- proof(deduplicated_data, year = 2024)
 ```
 
@@ -269,7 +353,7 @@ The data fields are evaluated as follows:
     - `firstname` and `lastname` are `"TEST"`
     - `lastname` is `"INAUDIBLE"`
     - `firstname` is one of: `"INAUDIBLE", "BLANK", "USER", "TEST", "RESIDENT"`
--   `title` should be one of: `r REF_TITLES`
+-   `title` should be one of: NA, 0, 1, 2
 -   `firstname` is flagged as an error if:
     -   Contains anything other than letters, apostrophe(s), space(s), and/or hyphen(s)
     -   Contains less than 2 letters
@@ -278,13 +362,13 @@ The data fields are evaluated as follows:
 -   `lastname` is flagged as an error if:
     -   Contains anything except letters, apostrophe(s), space(s), hyphen(s), and/or period(s)
     -   Contains less than 2 letters
--   `suffix` should be one of: `r REF_SUFFIXES`
+-   `suffix` should be one of: I, II, III, IV, V, VI, VII, VIII, IX, X, XI, XII, XIII, XIV, XV, XVI, XVII, XIX, XX, 1ST, 2ND, 3RD, 4TH, 5TH, 6TH, 7TH, 8TH, 9TH, 10TH, 11TH, 12TH, 13TH, 14TH, 15TH, 16TH, 17TH, 18TH, 19TH, 20TH, JR, SR
 -   `address` is flagged if it contains a \|, tab, or non-UTF8 character
 -   `city` is flagged as an error if:
     -   Contains anything other than letters, space(s), hyphen(s), apostrophe(s), and/or period(s)
     -   Contains less than 3 letters
 -   `state` is flagged if it is not contained in the following list of abbreviations for US and Canada states, provinces, and territories:
-    -   `r REF_USA_CANADA`
+    -   AL, AK, AZ, AR, CA, CO, CT, DE, FL, GA, HI, ID, IL, IN, IA, KS, KY, LA, ME, MD, MA, MI, MN, MS, MO, MT, NE, NV, NH, NJ, NM, NY, NC, ND, OH, OK, OR, PA, RI, SC, SD, TN, TX, UT, VT, VA, WA, WV, WI, WY, DC, AS, GU, MP, PR, VI, UM, MH, FM, PW, AA, AE, AP, AB, BC, MB, NB, NL, NS, NT, NU, ON, PE, PQ, QC, SK, YT
 -   `zip` is flagged if the hunter's address doesn't have a zip that should be in their reported state of residence (checked against a master list of USA postal codes)
 -   `birth_date` is flagged if the birth year was \> `100` or \< `0` years ago
 -   `hunt_mig_birds` is flagged if it is not equal to `1` or `2`
@@ -302,7 +386,8 @@ The data fields are evaluated as follows:
 
 After the download data are proofed, the next step is to fix the data to the best of our ability. Data can be corrected by running the `correct` function on the proofed tibble. The year of the Harvest Information Program must be supplied as a parameter. Since the "errors" column is re-created using `correct`, supplying the year is necessary for the same reasons it is required by `proof`.
 
-```{r correct}
+
+``` r
 corrected_data <- correct(proofed_data, year = 2024)
 ```
 
@@ -318,21 +403,26 @@ All functions in [Part C](#part-c-data-visualization-and-tabulation) will run on
 
 The `pullErrors` function can be used to view all of the actual values that were flagged as errors in a particular field. In this example, we find that the "suffix" field contains several values that are not accepted.
 
-```{r pullerrors}
+
+``` r
 pullErrors(proofed_data, field = "suffix")
+#> [1] "MD"  "PHD" "DDS" "DVM"
 ```
 
 Running `pullErrors` on a field that has no errors will return a message.
 
-```{r pullerrors2}
+
+``` r
 pullErrors(proofed_data, field = "dove_bag")
+#> Success! All values are correct.
 ```
 
 ### write_hip {#write_hip}
 
 After the data have been processed with `correct`, the table is ready to be written for the database. Use `write_hip` to do final processing to the table, which includes adding in FWS strata and setting NAs to blank strings. If `split = FALSE`, the final table will be saved as a single .csv to your specified path. If `split = TRUE` (default), one .csv file per each input .txt source file will be written to the specified directory.
 
-```{r, writecsv, eval = FALSE}
+
+``` r
 
 write_hip(corrected_data, path = "C:/HIP/processed_data/")
 
@@ -342,7 +432,8 @@ write_hip(corrected_data, path = "C:/HIP/processed_data/")
 
 The `writeReport` function can be used to automatically generate an R markdown document with figures, tables, and summary statistics. This can be done at the end of a download cycle.
 
-```{r, writerpt, eval = FALSE}
+
+``` r
 
 # Windows only
 memory.limit(size = 55000)
@@ -363,19 +454,32 @@ writeReport(
 
 The `errorPlotFields` function can be run on all states...
 
-```{r errorfieldsplotall, fig.cap = "Figure 2. Plot of all location's errors by field name.", fig.width = 6, fig.height = 3.6, dpi = 300, out.width = 500, fig.align = "center"}
+
+``` r
 errorPlotFields(proofed_data, loc = "all", year = 2024)
 ```
 
+<div class="figure" style="text-align: center">
+<img src="figure/errorfieldsplotall-1.png" alt="Figure 2. Plot of all location's errors by field name." width="500" />
+<p class="caption">Figure 2. Plot of all location's errors by field name.</p>
+</div>
+
 ... or it can be limited to just one.
 
-```{r errorfieldsplotsc, fig.cap = "Figure 3. Plot of Louisiana's errors by field name.", fig.width = 6, fig.height = 3.6, dpi = 300, out.width = 500, fig.align = "center"}
+
+``` r
 errorPlotFields(proofed_data, loc = "LA", year = 2024)
 ```
 
+<div class="figure" style="text-align: center">
+<img src="figure/errorfieldsplotsc-1.png" alt="Figure 3. Plot of Louisiana's errors by field name." width="500" />
+<p class="caption">Figure 3. Plot of Louisiana's errors by field name.</p>
+</div>
+
 It is possible to add any `ggplot2` components to these plots. For season total data specifically, the plot can be facet_wrapped using either dl_cycle or dl_date. The example below demonstrates how this package's functions can interact with the tidyverse and shows an example of an `errorPlotFields` facet_wrap (using a subset of 4 download cycles)
 
-```{r errorfieldsfacet, eval = FALSE}
+
+``` r
 errorPlotFields(
   hipdata2024 |>
     filter(str_detect(dl_cycle, "0800|0901|0902|1001")),
@@ -390,64 +494,131 @@ errorPlotFields(
 
 The `errorPlotStates` function plots error proportions per state. You may optionally set a threshold value to only view states above a certain proportion of error. Bar labels are error counts.
 
-```{r errorplotstates, fig.cap = "Figure 5. Plot of proportion of error by state.", fig.width = 6, fig.height = 4, dpi = 300, out.width = 500, fig.align = "center"}
+
+``` r
 errorPlotStates(proofed_data)
 ```
+
+<div class="figure" style="text-align: center">
+<img src="figure/errorplotstates-1.png" alt="Figure 5. Plot of proportion of error by state." width="500" />
+<p class="caption">Figure 5. Plot of proportion of error by state.</p>
+</div>
 
 ### errorPlotDL {#errorplotdl}
 
 This function should not be used unless you want to visualize an entire season of data. The `errorPlot_dl` function plots proportion of error per download cycle across the year. Location may be specified to see a particular state over time.
 
-```{r errorPlotDL, eval = FALSE}
+
+``` r
 errorPlot_dl(hipdata2024, loc = "MI")
 ```
 
-```{r errorplotdl_example, echo = FALSE, fig.cap = "errorPlot_dl example output", out.width = "70%", fig.align = "center"}
-knitr::include_graphics("image/errorPlot_dl.png")
-```
+<div class="figure" style="text-align: center">
+<img src="image/errorPlot_dl.png" alt="errorPlot_dl example output" width="70%" />
+<p class="caption">errorPlot_dl example output</p>
+</div>
 
 ### errorTable {#errortable}
 
 The `errorTable` function is a flexible way to obtain error data as a tibble, which can be assessed as needed or exported to create records of download cycle errors. The basic function reports errors by both location and field.
 
-```{r errortable1}
+
+``` r
 errorTable(proofed_data)
+#> # A tibble: 236 × 3
+#>    dl_state error     error_count
+#>    <chr>    <chr>           <int>
+#>  1 AK       email               1
+#>  2 AK       firstname           2
+#>  3 AK       lastname            3
+#>  4 AK       suffix             61
+#>  5 AK       zip               119
+#>  6 AL       email               8
+#>  7 AL       firstname           2
+#>  8 AL       lastname            1
+#>  9 AL       suffix             61
+#> 10 AL       zip               125
+#> # ℹ 226 more rows
 ```
 
 Errors can be reported by only location by turning off the `field` parameter.
 
-```{r errortable2}
+
+``` r
 errorTable(proofed_data, field = "none")
+#> # A tibble: 49 × 2
+#>    dl_state error_count
+#>    <chr>          <int>
+#>  1 AK               186
+#>  2 AL               197
+#>  3 AR               200
+#>  4 AZ               195
+#>  5 CA               198
+#>  6 CO               197
+#>  7 CT               185
+#>  8 DE               209
+#>  9 FL               212
+#> 10 GA               212
+#> # ℹ 39 more rows
 ```
 
 Errors can be reported by only field by turning off the `loc` parameter.
 
-```{r errortable3}
+
+``` r
 errorTable(proofed_data, loc = "none")
+#> # A tibble: 5 × 2
+#>   error     error_count
+#>   <chr>           <int>
+#> 1 email             228
+#> 2 firstname         113
+#> 3 lastname          126
+#> 4 suffix           3329
+#> 5 zip              5857
 ```
 
 Location can be specified.
 
-```{r errortable4}
+
+``` r
 errorTable(proofed_data, loc = "CA")
+#> # A tibble: 4 × 3
+#>   dl_state error    error_count
+#>   <chr>    <chr>          <int>
+#> 1 CA       email              5
+#> 2 CA       lastname           3
+#> 3 CA       suffix            66
+#> 4 CA       zip              124
 ```
 
 Field can be specified.
 
-```{r errortable5}
+
+``` r
 errorTable(proofed_data, field = "suffix")
+#> # A tibble: 1 × 2
+#>   error  error_count
+#>   <chr>        <int>
+#> 1 suffix        3329
 ```
 
 Total errors for a location can be pulled.
 
-```{r errortable6}
+
+``` r
 errorTable(proofed_data, loc = "CA", field = "none")
+#> # A tibble: 1 × 2
+#>   dl_state total_errors
+#>   <chr>           <int>
+#> 1 CA                198
 ```
 
 Total errors for a field in a particular location can be pulled.
 
-```{r errortable7}
+
+``` r
 errorTable(proofed_data, loc = "CA", field = "dove_bag")
+#> No errors in dove_bag for CA.
 ```
 
 ## Troubleshooting {#troubleshooting}
